[gd_scene load_steps=3 format=2]

[ext_resource path="res://items/DropItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://items/InvisibilityPotion.gd" type="Script" id=2]

[node name="InvisibilityPotion" type="Node2D"]
script = ExtResource( 2 )

[node name="DropItem" parent="." instance=ExtResource( 1 )]
frame = 10

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pickup" from="DropItem" to="." method="_on_DropItem_pickup"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
